[gd_scene load_steps=9 format=2]

[ext_resource path="res://sources/level/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/LevelTornado.gd" type="Script" id=2]
[ext_resource path="res://assets/action_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://entities/Tornado.tscn" type="PackedScene" id=4]
[ext_resource path="res://sources/Spawn.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/level2/Sky-layer.png" type="Texture" id=6]
[ext_resource path="res://assets/images/level2/buildings-layer.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -784.45, 16.4998, 0, 0, 0, 0, 590.795, 15.8352 )
}

[node name="LevelTornado" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground" index="0"]
motion_scale = Vector2( 0.3, 0.3 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Sky" index="0"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 1120, 224 )

[node name="City" type="ParallaxLayer" parent="ParallaxBackground" index="1"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/City" index="0"]
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 1120, 129 )

[node name="Level" type="TileMap" parent="." index="1"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 20, 20 )
cell_y_sort = true
collision_layer = 4
format = 1
tile_data = PoolIntArray( -851976, 1, 0, -851975, 1, 2, -786440, 1, 65536, -786439, 1, 65538, -851923, 1, 0, -851922, 1, 2, -720904, 1, 65536, -720903, 1, 65538, -786387, 1, 65536, -786386, 1, 65538, -655368, 1, 65536, -655367, 1, 65538, -720881, 7, 0, -720851, 1, 65536, -720850, 1, 65538, -589832, 1, 65536, -589831, 1, 65538, -655315, 1, 65536, -655314, 1, 65538, -524332, 1, 0, -524331, 1, 2, -524296, 1, 65536, -524295, 1, 65538, -589809, 1, 0, -589808, 1, 2, -589779, 1, 65536, -589778, 1, 65538, -458796, 1, 65536, -458795, 1, 65538, -458760, 1, 65536, -458759, 1, 65538, -524273, 1, 65536, -524272, 1, 65538, -524243, 1, 65536, -524242, 1, 65538, -393260, 1, 65536, -393259, 1, 65538, -393238, 7, 0, -393235, 7, 0, -393224, 1, 65536, -393223, 1, 65538, -393218, 3, 0, -393217, 5, 0, -458737, 1, 65536, -458736, 1, 65538, -458707, 1, 65536, -458706, 1, 65538, -327724, 1, 65536, -327723, 1, 65538, -327688, 1, 65536, -327687, 1, 65538, -327683, 1, 0, -327682, 1, 1, -327681, 1, 2, -393201, 1, 65536, -393200, 1, 65538, -393171, 1, 65536, -393170, 1, 65538, -262188, 1, 65536, -262187, 1, 65538, -262167, 1, 0, -262166, 1, 1, -262165, 1, 1, -262164, 1, 1, -262163, 1, 1, -262162, 1, 1, -262161, 1, 2, -262152, 1, 65536, -262151, 1, 65538, -262147, 1, 65536, -262146, 1, 65537, -262145, 1, 65538, -327671, 7, 0, -327665, 1, 65536, -327664, 1, 65538, -327659, 6, 0, -327658, 5, 0, -327635, 1, 65536, -327634, 1, 65538, -196652, 1, 65536, -196651, 1, 65538, -196631, 1, 131072, -196630, 1, 131073, -196629, 1, 131073, -196628, 1, 131073, -196627, 1, 131073, -196626, 1, 131073, -196625, 1, 131074, -196616, 1, 131072, -196615, 1, 131074, -196611, 1, 131072, -196610, 1, 131073, -196609, 1, 131074, -262140, 10, 0, -262129, 1, 65536, -262128, 1, 65538, -262124, 1, 0, -262123, 1, 1, -262122, 1, 1, -262121, 1, 2, -262106, 1, 0, -262105, 1, 1, -262104, 1, 1, -262103, 1, 1, -262102, 1, 1, -262101, 1, 1, -262100, 1, 1, -262099, 1, 0, -262098, 1, 65538, -131116, 1, 65536, -131115, 1, 65538, -196600, 1, 0, -196599, 1, 1, -196598, 1, 2, -196593, 1, 65536, -196592, 1, 65538, -196588, 1, 65536, -196587, 1, 0, -196586, 1, 131073, -196585, 1, 131074, -196570, 1, 65536, -196569, 1, 0, -196568, 1, 131073, -196567, 1, 131073, -196566, 1, 131073, -196565, 1, 131073, -196564, 1, 131073, -196563, 1, 0, -196562, 1, 65538, -65580, 1, 65536, -65579, 1, 65538, -65575, 10, 0, -65566, 10, 0, -65557, 10, 0, -65546, 10, 0, -131069, 9, 0, -131068, 11, 0, -131067, 12, 0, -131064, 1, 131072, -131063, 1, 131073, -131062, 1, 131074, -131060, 10, 0, -131057, 1, 131072, -131056, 1, 131074, -131052, 1, 65536, -131051, 1, 65538, -131049, 10, 0, -131039, 10, 0, -131034, 1, 131072, -131033, 1, 131074, -131027, 1, 65536, -131026, 1, 65538, -44, 1, 65536, -43, 1, 65538, -37, 7, 0, -27, 7, 0, -15, 7, 0, -3, 7, 0, -65533, 1, 0, -65532, 1, 1, -65531, 1, 2, -65516, 1, 65536, -65515, 1, 65538, -65491, 1, 65536, -65490, 1, 65538, 65492, 1, 65536, 65493, 1, 65538, 65495, 8, 0, 65507, 8, 0, 65511, 6, 0, 65512, 5, 0, 65520, 3, 0, 3, 1, 65536, 4, 1, 65537, 5, 1, 65538, 8, 4, 0, 10, 9, 0, 11, 11, 0, 12, 11, 0, 13, 11, 0, 14, 11, 0, 15, 12, 0, 20, 1, 65536, 21, 1, 65538, 22, 6, 0, 25, 8, 0, 35, 3, 0, 36, 4, 0, 45, 1, 65536, 46, 1, 65538, 131028, 1, 65536, 131029, 1, 0, 131030, 1, 1, 131031, 1, 1, 131032, 1, 1, 131033, 1, 1, 131034, 1, 1, 131035, 1, 1, 131036, 1, 1, 131037, 1, 1, 131038, 1, 1, 131039, 1, 1, 131040, 1, 1, 131041, 1, 1, 131042, 1, 1, 131043, 1, 1, 131044, 1, 1, 131045, 1, 1, 131046, 1, 1, 131047, 1, 1, 131048, 1, 1, 131049, 1, 1, 131050, 1, 1, 131051, 1, 1, 131052, 1, 1, 131053, 1, 1, 131054, 1, 1, 131055, 1, 1, 131056, 1, 1, 131057, 1, 1, 131058, 1, 1, 131059, 1, 1, 131060, 1, 1, 131061, 1, 1, 131062, 1, 1, 131063, 1, 1, 131064, 1, 1, 131065, 1, 1, 131066, 1, 1, 131067, 1, 1, 131068, 1, 1, 131069, 1, 1, 131070, 1, 1, 131071, 1, 1, 65536, 1, 1, 65537, 1, 1, 65538, 1, 1, 65539, 1, 0, 65540, 1, 65537, 65541, 1, 0, 65542, 1, 1, 65543, 1, 1, 65544, 1, 1, 65545, 1, 1, 65546, 1, 1, 65547, 1, 1, 65548, 1, 1, 65549, 1, 1, 65550, 1, 1, 65551, 1, 1, 65552, 1, 1, 65553, 1, 1, 65554, 1, 1, 65555, 1, 1, 65556, 1, 0, 65557, 1, 0, 65558, 1, 1, 65559, 1, 1, 65560, 1, 1, 65561, 1, 1, 65562, 1, 1, 65563, 1, 1, 65564, 1, 1, 65565, 1, 1, 65566, 1, 1, 65567, 1, 1, 65568, 1, 1, 65569, 1, 1, 65570, 1, 1, 65571, 1, 1, 65572, 1, 1, 65573, 1, 1, 65574, 1, 1, 65575, 1, 1, 65576, 1, 1, 65577, 1, 1, 65578, 1, 1, 65579, 1, 1, 65580, 1, 1, 65581, 1, 0, 65582, 1, 65538, 196564, 1, 131072, 196565, 1, 131073, 196566, 1, 131073, 196567, 1, 131073, 196568, 1, 131073, 196569, 1, 131073, 196570, 1, 131073, 196571, 1, 131073, 196572, 1, 131073, 196573, 1, 131073, 196574, 1, 131073, 196575, 1, 131073, 196576, 1, 131073, 196577, 1, 131073, 196578, 1, 131073, 196579, 1, 131073, 196580, 1, 131073, 196581, 1, 131073, 196582, 1, 131073, 196583, 1, 131073, 196584, 1, 131073, 196585, 1, 131073, 196586, 1, 131073, 196587, 1, 131073, 196588, 1, 131073, 196589, 1, 131073, 196590, 1, 131073, 196591, 1, 131073, 196592, 1, 131073, 196593, 1, 131073, 196594, 1, 131073, 196595, 1, 131073, 196596, 1, 131073, 196597, 1, 131073, 196598, 1, 131073, 196599, 1, 131073, 196600, 1, 131073, 196601, 1, 131073, 196602, 1, 131073, 196603, 1, 131073, 196604, 1, 131073, 196605, 1, 131073, 196606, 1, 131073, 196607, 1, 131073, 131072, 1, 131073, 131073, 1, 131073, 131074, 1, 131073, 131075, 1, 131073, 131076, 1, 131073, 131077, 1, 131073, 131078, 1, 131073, 131079, 1, 131073, 131080, 1, 131073, 131081, 1, 131073, 131082, 1, 131073, 131083, 1, 131073, 131084, 1, 131073, 131085, 1, 131073, 131086, 1, 131073, 131087, 1, 131073, 131088, 1, 131073, 131089, 1, 131073, 131090, 1, 131073, 131091, 1, 131073, 131092, 1, 131073, 131093, 1, 131073, 131094, 1, 131073, 131095, 1, 131073, 131096, 1, 131073, 131097, 1, 131073, 131098, 1, 131073, 131099, 1, 131073, 131100, 1, 131073, 131101, 1, 131073, 131102, 1, 131073, 131103, 1, 131073, 131104, 1, 131073, 131105, 1, 131073, 131106, 1, 131073, 131107, 1, 131073, 131108, 1, 131073, 131109, 1, 131073, 131110, 1, 131073, 131111, 1, 131073, 131112, 1, 131073, 131113, 1, 131073, 131114, 1, 131073, 131115, 1, 131073, 131116, 1, 131073, 131117, 1, 131073, 131118, 1, 131074 )

[node name="Player" parent="." index="2"]
position = Vector2( -653.996, -1.02669 )
jump_force = 100.0

[node name="TornadoPath" type="Path2D" parent="." index="5"]
position = Vector2( 7.04205, -1.7605 )
curve = SubResource( 1 )

[node name="TornadoFollow" type="PathFollow2D" parent="TornadoPath" index="0"]
position = Vector2( -784.45, 16.4998 )
rotation = -0.00868514
rotate = false
loop = false

[node name="Tornado" parent="TornadoPath/TornadoFollow" index="0" instance=ExtResource( 4 )]
position = Vector2( 1.88922, -40.0102 )
rotation = 0.00868514

[node name="FirstSpawn" type="PathFollow2D" parent="TornadoPath" index="1"]
position = Vector2( -784.45, 16.4998 )
rotation = -0.00868514
rotate = false

[node name="Spawn" parent="TornadoPath/FirstSpawn" index="0" instance=ExtResource( 5 )]
position = Vector2( 129.838, -15.852 )
rotation = 0.00868514
activated = true

[node name="SecondSpawn" type="PathFollow2D" parent="TornadoPath" index="2"]
position = Vector2( -193.062, 16.214 )
rotation = -0.00868634
offset = 593.4
rotate = false

[node name="Spawn2" parent="TornadoPath/SecondSpawn" index="0" instance=ExtResource( 5 )]
position = Vector2( 81.0815, -13.5681 )
rotation = 0.00868514
[connection signal="end_reached" from="TornadoPath/TornadoFollow/Tornado" to="." method="_on_Tornado_end_reached"]
[connection signal="triggered" from="TornadoPath/TornadoFollow/Tornado" to="." method="_on_Tornado_triggered"]
